--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.3.3
+  path: ^1.9.0
 
   cupertino_icons: ^1.0.8
 
@@ -23,6 +25,11 @@ flutter:
 
   assets:
     - lib/assets/images/planeta.png
+    - lib/assets/images/coqueirinho.jpeg
+    - lib/assets/images/letreiro.jpeg
+    - lib/assets/images/centrojoaopessoa.jpeg
+    - lib/assets/images/tambaba.jpeg
+    - lib/assets/images/piscinasnaturais.jpeg
 
   fonts:
     - family: Poppins
