--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ flutter:
     - lib/assets/images/tambaba.jpeg
     - lib/assets/images/piscinasnaturais.jpeg
     - lib/assets/images/profile.png
-
+    - lib/assets/images/visa.png
+    - lib/assets/images/mastercard.png
+    - lib/assets/images/americanexpress.png
+    - lib/assets/images/elo.png
+    - lib/assets/images/pix.png
   fonts:
     - family: Poppins
       fonts:
