--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.3
   path: ^1.9.0
+  intl: ^0.18.1
+  image_picker: ^1.1.2
+  flutter_multi_formatter: ^2.0.1
 
   cupertino_icons: ^1.0.8
 
