mudanças na conta da empresa

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   intl: ^0.18.1
   image_picker: ^1.1.2
   flutter_multi_formatter: ^2.0.1
-
+  flutter_time_picker_spinner: ^2.0.0
+  table_calendar: ^3.0.9
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
