--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.3.3
-  path: ^1.9.0
+  http: ^1.2.0
+  provider: ^6.1.1
+  flutter_secure_storage: ^9.0.0
+  jwt_decode: ^0.3.1
   intl: ^0.18.1
   image_picker: ^1.1.2
   flutter_multi_formatter: ^2.0.1
